--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScrapChacha | Sell Scrap from Home</title>
+    <title>ScrapChacha | Official Website</title>
     <meta name="description" content="Sell scrap online in Pakistan. Best rates for Paper, Plastic, Metal, and E-Waste. Free doorstep pickup with ScrapChacha.">
     
     <!-- Google Fonts -->
